--- a/client/package.json
+++ b/client/package.json
@@ -17,9 +17,11 @@
     "react-google-maps": "^9.4.5",
     "react-hook-form": "^7.27.1",
     "react-icons": "^4.3.1",
+    "react-redux": "^7.2.8",
     "react-router-dom": "^6.2.2",
     "react-scripts": "5.0.0",
     "reactstrap": "^9.0.1",
+    "redux": "^4.1.2",
     "web-vitals": "^2.1.4",
     "yup": "^0.32.11"
   },
