--- a/client/package.json
+++ b/client/package.json
@@ -21,6 +21,7 @@
     "react-redux": "^7.2.8",
     "react-router-dom": "^6.2.2",
     "react-scripts": "5.0.0",
+    "react-select": "^5.3.0",
     "reactstrap": "^9.0.1",
     "redux": "^4.1.2",
     "redux-persist": "^6.0.0",
