--- a/client/package.json
+++ b/client/package.json
@@ -14,6 +14,7 @@
     "lodash": "^4.17.21",
     "query-string": "^7.1.1",
     "react": "^17.0.2",
+    "react-datepicker": "^4.7.0",
     "react-dom": "^17.0.2",
     "react-google-maps": "^9.4.5",
     "react-hook-form": "^7.27.1",
