--- a/client/package.json
+++ b/client/package.json
@@ -23,6 +23,7 @@
     "react-router-dom": "^6.2.2",
     "react-scripts": "5.0.0",
     "react-select": "^5.3.0",
+    "react-toastify": "^8.2.0",
     "reactstrap": "^9.0.1",
     "redux": "^4.1.2",
     "redux-persist": "^6.0.0",
