--- a/server/package.json
+++ b/server/package.json
@@ -20,6 +20,7 @@
     "md5": "^2.3.0",
     "mongoose": "^6.2.7",
     "multer": "^1.4.4",
+    "multer-storage-cloudinary": "^4.0.0",
     "nodemailer": "^6.7.3"
   },
   "devDependencies": {
