--- a/client/package.json
+++ b/client/package.json
@@ -11,9 +11,11 @@
     "@testing-library/user-event": "^13.5.0",
     "antd": "^4.19.1",
     "axios": "^0.26.1",
+    "chart.js": "^3.7.1",
     "lodash": "^4.17.21",
     "query-string": "^7.1.1",
     "react": "^17.0.2",
+    "react-chartjs-2": "^3.0.4",
     "react-datepicker": "^4.7.0",
     "react-dom": "^17.0.2",
     "react-google-maps": "^9.4.5",
